crates/ruff_linter/src/rules/flake8_unused_arguments/snapshots/ruff_linter__rules__flake8_unused_arguments__tests__ARG002_ARG.py.snap
---
source: crates/ruff_linter/src/rules/flake8_unused_arguments/mod.rs
---
ARG002 Unused method argument: `x`
  --> ARG.py:37:17
   |
37 |     def f(self, x):
   |                 ^
   |

ARG002 Unused method argument: `x`
  --> ARG.py:40:20
   |
40 |     def f(self, /, x):
   |                    ^
   |

ARG002 Unused method argument: `x`
  --> ARG.py:43:16
   |
43 |     def f(cls, x):
   |                ^
   |

ARG002 Unused method argument: `x`
  --> ARG.py:58:17
   |
58 |     def f(self, x):
   |                 ^
   |

ARG002 Unused method argument: `x`
  --> ARG.py:62:17
   |
62 |     def f(self, x):
   |                 ^
   |

ARG002 Unused method argument: `x`
  --> ARG.py:66:17
   |
66 |     def f(self, x):
   |                 ^
   |

ARG002 Unused method argument: `x`
   --> ARG.py:216:24
    |
216 |     def __init__(self, x) -> None:
    |                        ^
    |

ARG002 Unused method argument: `y`
   --> ARG.py:255:20
    |
255 |     def f(self, x, y):
    |                    ^
    |
