crates/ruff_linter/src/rules/flake8_unused_arguments/snapshots/ruff_linter__rules__flake8_unused_arguments__tests__ARG003_ARG.py.snap
---
source: crates/ruff_linter/src/rules/flake8_unused_arguments/mod.rs
---
ARG003 Unused class method argument: `x`
  --> ARG.py:47:16
   |
47 |     def f(cls, x):
   |                ^
   |
