crates/ruff_linter/src/rules/flake8_unused_arguments/snapshots/ruff_linter__rules__flake8_unused_arguments__tests__ARG004_ARG.py.snap
---
source: crates/ruff_linter/src/rules/flake8_unused_arguments/mod.rs
---
ARG004 Unused static method argument: `cls`
  --> ARG.py:51:11
   |
51 |     def f(cls, x):
   |           ^^^
   |

ARG004 Unused static method argument: `x`
  --> ARG.py:51:16
   |
51 |     def f(cls, x):
   |                ^
   |

ARG004 Unused static method argument: `x`
  --> ARG.py:55:11
   |
55 |     def f(x):
   |           ^
   |

ARG004 Unused static method argument: `x`
   --> ARG.py:213:22
    |
213 |     def __new__(cls, x):
    |                      ^
    |
