crates/ruff_linter/src/rules/flake8_unused_arguments/snapshots/ruff_linter__rules__flake8_unused_arguments__tests__ARG005_ARG.py.snap
---
source: crates/ruff_linter/src/rules/flake8_unused_arguments/mod.rs
---
ARG005 Unused lambda argument: `x`
  --> ARG.py:28:8
   |
28 | lambda x: print("Hello, world!")
   |        ^
   |
