crates/ruff_linter/src/rules/flake8_unused_arguments/snapshots/ruff_linter__rules__flake8_unused_arguments__tests__ignore_variadic_names.snap
---
source: crates/ruff_linter/src/rules/flake8_unused_arguments/mod.rs
---
ARG001 Unused function argument: `a`
 --> ignore_variadic_names.py:1:7
  |
1 | def f(a, b):
  |       ^
  |

ARG001 Unused function argument: `b`
 --> ignore_variadic_names.py:1:10
  |
1 | def f(a, b):
  |          ^
  |

ARG001 Unused function argument: `a`
 --> ignore_variadic_names.py:5:7
  |
5 | def f(a, b, *args, **kwargs):
  |       ^
  |

ARG001 Unused function argument: `b`
 --> ignore_variadic_names.py:5:10
  |
5 | def f(a, b, *args, **kwargs):
  |          ^
  |

ARG002 Unused method argument: `a`
  --> ignore_variadic_names.py:10:17
   |
10 |     def f(self, a, b):
   |                 ^
   |

ARG002 Unused method argument: `b`
  --> ignore_variadic_names.py:10:20
   |
10 |     def f(self, a, b):
   |                    ^
   |

ARG002 Unused method argument: `a`
  --> ignore_variadic_names.py:13:17
   |
13 |     def f(self, a, b, *args, **kwargs):
   |                 ^
   |

ARG002 Unused method argument: `b`
  --> ignore_variadic_names.py:13:20
   |
13 |     def f(self, a, b, *args, **kwargs):
   |                    ^
   |
