crates/ruff_linter/src/rules/flake8_unused_arguments/snapshots/ruff_linter__rules__flake8_unused_arguments__tests__unused-lambda-argument_ARG.py.snap
---
source: crates/ruff_linter/src/rules/flake8_unused_arguments/mod.rs
---
ARG005 Unused lambda argument: `x`
  --> ARG.py:28:8
   |
26 | # Unused arguments on lambdas.
27 | ###
28 | lambda x: print("Hello, world!")
   |        ^
29 |
30 | lambda: print("Hello, world!")
   |

ARG005 Unused lambda argument: `_次_`
   --> ARG.py:298:8
    |
298 | lambda _次_: print("Hello, world!")
    |        ^^^^
